--- a/zpotify/index.html
+++ b/zpotify/index.html
@@ -6,13 +6,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Tus Artistas Favoritos</title>
 </head>
 
 <body>
     <main class="principal">
         <header>
-            <h1>Tus Artistas Faavoritos</h1>
+            <h1>Tus Artistas Favoritos</h1>
         </header>
         <section class="artistas">
             <article>
